--- a/LoginWeb/Layout/MainLayout.razor
+++ b/LoginWeb/Layout/MainLayout.razor
@@ -1,16 +1,9 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+<div class="flex min-h-screen flex-col">
+    <header class="bg-blue-600 p-4 text-center font-bold text-white">
+        CoreReserve
+    </header>
+    <main class="flex-1 p-4">
+        @Body
     </main>
 </div>
